<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">飞侠故事机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="loading">加载中…</string>
	<string name="erro">网络连接错误</string>
	<string name="label_account">我的账户</string>
	<string name="label_set">设置</string>
	
	<string name="label_set_backgroud_music">主题音乐开关</string>
	<string name="label_set_bluetooth_ararm">蓝牙报警开关</string>
	<string name="label_set_introdeuce">APP 说明书</string>
	<string name="label_set_suggest">意见反馈及改善意见</string>
	<string name="label_set_checkupdate">检查软件更新</string>
	<string name="label_set_about">关于我们</string>
	<string name="label_set_exit">退出当前账户</string>
	<string name="title_login_regist">注册</string>
	<string name="hint_login_email">邮箱</string>
	<string name="hint_login_pwd">请输入密码</string>
	<string name="desc_login_forgetpwd">忘记密码</string>
	<string name="hint_regist_email">请输入邮箱</string>
	<string name="regist_pwd">设置密码</string>
	<string name="regist_click_stand">点击注册表示同意</string>
	<string name="regist_user_protrol">《用户协议》</string>
	<string name="hint_regist_inputnum">请输入验证码</string>
	<string name="find_pwd_cannot_receive">收不到验证码？</string>
	<string name="hint_name_inputnew">请输入新昵称</string>
	<string name="hint_email_inputnew">请输入新邮箱</string>
	<string name="hint_pwd_inputnew">请输入新密码</string>
	<string name="hint_registname_inputnew">请输入你的昵称</string>
	<string name="hint_registage_inputnew">请输入你的年龄</string>
	<string name="toast_registpwd2_inputnew">再次输入密码</string>
	<string name="toast_no_net">当前无网络！</string>
	<string name="toast_no_emailinfo">请输入邮箱！</string>
	<string name="toast_no_password">请输入密码！</string>
	<string name="toast_account_correctemail">请输入正确的邮箱！</string>
	<string name="toast_register_code">请输入验证码！</string>
	<string name="toast_activate_success">已激活！</string>
	<string name="toast_exit_success">退出成功！</string>
	<string name="label_account_active">激活</string>
	<string name="label_account_exitlogin">退出登录</string>
	<string name="label_account_pic">头像</string>
	<string name="label_account_name">昵称</string>
	<string name="label_account_email">邮箱</string>
	<string name="dialog_account_localpic">本地相册</string>
	<string name="dialog_account_takepic">拍照</string>	
	<string name="desc_set_abountus">关于我们：\n        超级飞侠智能穿戴故事机APP是奥飞娱乐股份有限公司专门为儿童教育设计和开发的应用APP。\n\n\t\t\t我们一直秉持着给孩子带来知识和快乐的宗旨，不断追求卓越，为孩子持续提供新颖优质的智能、娱乐产品，用科技创造快乐。孩子的健康快乐成长是父母的最大心愿，我们非常重视产品的品质，精心打造每一款产品，经过不断努力，超级飞侠乐迪智能穿戴故事机&amp;免费APP和大家见面啦！它可给孩子讲故事、唱儿歌、录音和玩益智游戏等，让孩子边学边玩，成为故事儿歌信手拈来小小演说家！戴上乐迪和小爱,我们一起出发吧！\n\n\t\t\t更多产品详情，敬请浏览奥迪双钻天猫商城：<a href="https://auldeywj.tmall.com">https://auldeywj.tmall.com</a>\n\n\n\n\n\n\n\n\n\n</string>
	<string name="desc_set_version">\t\t版本号为：1.0.0</string>
	<string name="btn_sent">发送</string>
	<string name="toast_sent_success">发送成功！</string>
	<string name="toast_sent_fail">发送失败，请检查网络！</string>
	<string name="no_info">暂未设置</string>
	<string name="request_exception_list">网络状况不佳，请稍后再试！</string>
	<string name="empty_list">请求列表为空！</string>
	<string name="notify_close">关闭</string>
	<string name="notify_alway">您的小孩已走远啦，请留意！</string>
	<string name="notify_web">网络状况不佳，请稍后再试！</string>
	<string name="dialog_input_code">请输入激活码</string>	
	<string name="loading_start">开始缓冲音乐.</string>
	<string name="loading_end">缓冲结束，开始播放音乐.</string>
	<string name="word_size_over">超出字数</string>
  
	<string name="toast_regist_inputemail">请输入邮箱</string>
	<string name="toast_regist_inputpwd">请输入密码</string>
	<string name="toast_regist_inputpwdagain">请再次输入密码</string>
	<string name="toast_regist_wrongpwd">俩次输入密码不一致</string>
	<string name="toast_regist_nickname">请输入昵称</string>
	<string name="toast_regist_age">请输入年龄</string>
	<string name="toast_regist_wrongage">请输入正确年龄！</string>
</resources>
