<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_bg"
        android:background="@drawable/ic_common_bg" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width_margin_left"
            android:src="@drawable/ic_common_back" />

        <ImageView
            android:layout_width="@dimen/width_title_common"
            android:layout_height="@dimen/height_title_common"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_set_titletxt" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_divide"
        android:background="#EEEE00" />

    <LinearLayout
        android:id="@+id/ll_background_music"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/ic_background_set" />

        <TextView
            style="@style/textSetStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:layout_weight="1"
            android:text="@string/label_set_backgroud_music" />

        <ImageView
            android:id="@+id/iv_bg_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/width_margin"
            android:scaleType="centerInside"
            android:src="@drawable/ic_music_open" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_divide" />

    <LinearLayout
        android:id="@+id/ll_background_blue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/ic_blue_light" />

        <TextView
            style="@style/textSetStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:layout_weight="1"
            android:text="@string/label_set_bluetooth_ararm" />

        <ImageView
            android:id="@+id/iv_blue_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/width_margin"
            android:scaleType="centerInside"
            android:src="@drawable/ic_music_open" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_divide" />

    <LinearLayout
        android:id="@+id/ll_introduce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/btn_introduce" />

        <TextView
            style="@style/textSetStyle"
            android:layout_width="@dimen/width_item"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:text="@string/label_set_introdeuce" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:scaleType="centerInside"
            android:src="@drawable/ic_common_row" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_divide" />

    <LinearLayout
        android:id="@+id/ll_suggest"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/ic_set_suggestpic" />

        <TextView
            style="@style/textSetStyle"
            android:layout_width="@dimen/width_item"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:text="@string/label_set_suggest" />

        <ImageView
            android:id="@+id/iv_suggestrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:scaleType="centerInside"
            android:src="@drawable/ic_common_row" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_suggest_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/width_margin_left"
        android:visibility="gone" >

        <EditText
            android:id="@+id/et_suggest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_desc"
            android:background="@drawable/shape_edit_style"
            android:gravity="top"
            android:padding="@dimen/width_margin_left" />

        <Button
            android:id="@+id/btn_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/selector_btn_sent"
            android:paddingTop="@dimen/width_margin_left"
            android:text="@string/btn_sent" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_divide" />

    <LinearLayout
        android:id="@+id/ll_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/ic_set_updatepic" />

        <TextView
            style="@style/textSetStyle"
            android:layout_width="@dimen/width_item"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:text="@string/label_set_checkupdate" />

        <ImageView
            android:id="@+id/iv_updaterow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:scaleType="centerInside"
            android:src="@drawable/ic_common_row" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_update_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_set_version"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_divide" />

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/ic_set_aboutpic" />

        <TextView
            style="@style/textSetStyle"
            android:layout_width="@dimen/width_item"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:text="@string/label_set_about" />

        <ImageView
            android:id="@+id/iv_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:scaleType="centerInside"
            android:src="@drawable/ic_common_row" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_desc"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/width_margin_left" >

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_set_abountus"
                android:textColor="@color/black" />
        </ScrollView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_divide" />

    <LinearLayout
        android:id="@+id/ll_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/ic_set_exitpic" />

        <TextView
            style="@style/textSetStyle"
            android:layout_width="@dimen/width_item"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:text="@string/label_set_exit" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:scaleType="centerInside"
            android:src="@drawable/ic_common_row" />
    </LinearLayout>

</LinearLayout>