<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_title_bg"  
    android:background="@drawable/ic_common_bg"
        >
         <ImageView
    android:id="@+id/iv_back" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"  
    android:src="@drawable/ic_common_back"
    android:layout_centerVertical="true" 
    android:layout_marginLeft="@dimen/width_margin_left"
            />
		<ImageView
            android:layout_width="@dimen/width_title_common"
            android:layout_height="@dimen/height_title_common"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_regist_titletxt"
            />
		
        </RelativeLayout>
	  <View 
    android:layout_width="match_parent"
     android:layout_height="@dimen/height_title_divide"  
    android:background="#EEEE00"
        />
	    <LinearLayout
	
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_common"  
    android:background="@color/white" 
    android:orientation="horizontal"
        >
       <ImageView 
    android:layout_width="@dimen/width_item_pic"
    android:layout_height="@dimen/height_item_pic" 
    android:src="@drawable/ic_login_phonepic"
    android:layout_gravity="center_vertical"  
    android:layout_marginLeft="@dimen/width_margin"  
        />
 
       <EditText
    android:id="@+id/et_email" 
    android:layout_height="match_parent"
    android:layout_width="@dimen/width_item_et"    
    android:hint="@string/hint_regist_email"
    android:background="@null"
    android:layout_marginLeft="@dimen/width_margin"
    android:singleLine="true"
    
           />
       </LinearLayout>
	      <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_divide" 
    android:gravity="top" 
        > 
       <ImageView 
    android:layout_width="@dimen/width_item_et"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_common_line"  
	android:scaleType="fitXY"
	android:layout_marginLeft="@dimen/width_margin_line"
           />
       
       </LinearLayout>
       	        <LinearLayout
	
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_common"  
    android:background="@color/white" 
    android:orientation="horizontal"
        >
       <ImageView 
    android:layout_width="@dimen/width_item_pic"
    android:layout_height="@dimen/height_item_pic" 
    android:src="@drawable/ic_regist_numpic"
    android:layout_gravity="center_vertical"  
    android:layout_marginLeft="@dimen/width_margin"  
        />
       <!-- @string/hint_regist_phone  android:inputType="phone" -->
       <EditText
    android:id="@+id/et_pwd1" 
    android:layout_height="match_parent"
    android:layout_width="@dimen/width_item_et"    
    android:hint="@string/regist_pwd"
    android:background="@null"
    android:layout_marginLeft="@dimen/width_margin"
    android:singleLine="true"
    android:inputType="textPassword"
           />
       </LinearLayout>
	      <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_divide" 
    android:gravity="top" 
        > 
       <ImageView 
    android:layout_width="@dimen/width_item_et"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_common_line"  
	android:scaleType="fitXY"
	android:layout_marginLeft="@dimen/width_margin_line"
           />
       
       </LinearLayout>
	        <LinearLayout 
    android:layout_width="match_parent"
     android:layout_height="@dimen/height_item_common"  
    android:background="@color/white" 
    android:orientation="horizontal"
        >
         <ImageView 
    android:layout_width="@dimen/width_item_pic"
    android:layout_height="@dimen/height_item_pic" 
    android:src="@drawable/ic_login_pwdpic"
    android:layout_gravity="center_vertical"  
    android:layout_marginLeft="@dimen/width_margin"  
        />
       <EditText
     android:id="@+id/et_pwd2" 
    android:layout_height="match_parent"
    android:layout_width="@dimen/width_item_et"      
    android:hint="@string/toast_registpwd2_inputnew"
    android:background="@null"   
    android:layout_marginLeft="@dimen/width_margin"
    android:singleLine="true"
    android:inputType="textPassword"
           />
       </LinearLayout>
       <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_divide"  
        > 
       <ImageView 
    android:layout_width="@dimen/width_item_et"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_common_line"  
	android:scaleType="fitXY"
	android:layout_marginLeft="@dimen/width_margin_line"
           />
       
       </LinearLayout>
        <LinearLayout 
    android:layout_width="match_parent"
     android:layout_height="@dimen/height_item_common"  
    android:background="@color/white" 
    android:orientation="horizontal"
        >
         <ImageView 
    android:layout_width="@dimen/width_item_pic"
    android:layout_height="@dimen/height_item_pic" 
    android:src="@drawable/ic_regist_name"
    android:layout_gravity="center_vertical"  
    android:layout_marginLeft="@dimen/width_margin"  
        />
         <!-- @string/regist_pwd -->
       <EditText
     android:id="@+id/et_name" 
    android:layout_height="match_parent"
    android:layout_width="@dimen/width_item_et"      
    android:hint="@string/hint_registname_inputnew"
    android:background="@null"   
    android:layout_marginLeft="@dimen/width_margin"
    android:singleLine="true"
    
           />
       </LinearLayout>
       <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_divide"  
        > 
       <ImageView 
    android:layout_width="@dimen/width_item_et"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_common_line"  
	android:scaleType="fitXY"
	android:layout_marginLeft="@dimen/width_margin_line"
           />
       
       </LinearLayout>
        <LinearLayout 
    android:layout_width="match_parent"
     android:layout_height="@dimen/height_item_common"  
    android:background="@color/white" 
    android:orientation="horizontal"
        >
         <ImageView 
    android:layout_width="@dimen/width_item_pic"
    android:layout_height="@dimen/height_item_pic" 
    android:src="@drawable/ic_regist_age"
    android:layout_gravity="center_vertical"  
    android:layout_marginLeft="@dimen/width_margin"  
        />
         <!-- @string/regist_pwd -->
       <EditText
     android:id="@+id/et_age" 
    android:layout_height="match_parent"
    android:layout_width="@dimen/width_item_et"      
    android:hint="@string/hint_registage_inputnew"
    android:background="@null"   
    android:layout_marginLeft="@dimen/width_margin"
    android:singleLine="true"
    android:inputType="number"
           />
       </LinearLayout>
       <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_divide"  
        > 
       <ImageView 
    android:layout_width="@dimen/width_item_et"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_common_line"  
	android:scaleType="fitXY"
	android:layout_marginLeft="@dimen/width_margin_line"
           />
       
       </LinearLayout>
       
       <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_comm" 
    android:gravity="center" 
    android:orientation="horizontal">
           <Button
    android:id="@+id/btn_boy" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_boy" 
       
               />
           <Button 
    android:id="@+id/btn_girl" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_girl" 
    android:layout_marginLeft="@dimen/marginlft_regist_button"   
               />
       </LinearLayout>
	    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_item_common"  
    android:background="@color/white" 
    android:orientation="horizontal"
     android:layout_marginTop="@dimen/height_item_divide"
     android:gravity="center"
        >

	        <ImageView
	            android:id="@+id/iv_regist"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:scaleType="centerInside"
	            android:src="@drawable/btn_register_register" />

       </LinearLayout>
       <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="@dimen/height_item_common"  
    android:background="@color/white" 
    android:orientation="horizontal"
     android:layout_marginTop="@dimen/height_item_divide"
     android:layout_gravity="center"
        >
	        <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/regist_click_stand"
    android:textStyle="bold"
           />
	        <TextView
    android:id="@+id/tv_user_pro" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/regist_user_protrol"
    android:textColor="@color/link_blue"
    android:textStyle="bold"
           />
         
       
       </LinearLayout>
       
</LinearLayout>
