<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_bg"
        android:background="@drawable/ic_common_bg" >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/width_margin_left"
            android:src="@drawable/ic_common_back" />

        <ImageView
            android:layout_width="@dimen/width_title_common"
            android:layout_height="@dimen/height_title_common"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_login_titletxt" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/width_margin_left"
            android:text="@string/title_login_regist"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title_divide"
        android:background="#EEEE00" />

    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/ic_login_phonepic" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="@dimen/width_item_et"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/width_margin"
            android:background="@null"
            android:hint="@string/hint_login_email"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_divide" >

        <ImageView
            android:layout_width="@dimen/width_item_et"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width_margin_line"
            android:scaleType="fitXY"
            android:src="@drawable/ic_common_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_set"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/width_item_pic"
            android:layout_height="@dimen/height_item_pic"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/width_margin"
            android:src="@drawable/ic_login_pwdpic" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="@dimen/width_item_et"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/width_margin"
            android:background="@null"
            android:hint="@string/hint_login_pwd"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_divide" >

        <ImageView
            android:layout_width="@dimen/width_item_et"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width_margin_line"
            android:scaleType="fitXY"
            android:src="@drawable/ic_common_line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_marginTop="@dimen/height_item_divide"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/btn_login_login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item_common"
        android:layout_marginTop="@dimen/height_item_divide"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width_margin_lefttxt"
            android:text="@string/desc_login_forgetpwd"
            android:textColor="@color/link_blue"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>